# neobrowser

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  pytest.ini
Profile 24/: Local State
agents/: edreams_search.py  extract_agent.py  hotel_agent.py  monitor_agent.py  recon_agent.py
benchmarks/: adapters.py  bench_full.py  lib.py  run.py
crates/neo-chrome/: Cargo.toml
crates/neo-chrome/src/: cdp.rs  emulation.rs  fetch_proxy.rs  input.rs  launcher.rs  lib.rs  mock.rs  mouse.rs  navigation.rs  observation.rs  performance.rs  session.rs  sync_session.rs
crates/neo-chrome/tests/: emulation_tests.rs  input_tests.rs  mouse_tests.rs  navigation_tests.rs  performance_tests.rs
crates/neo-dom/: Cargo.toml
crates/neo-dom/src/: dom_forms.rs  html5ever_dom.rs  lib.rs  mock.rs  query.rs  visibility.rs
crates/neo-dom/tests/: dom_tests.rs
crates/neo-engine/: Cargo.toml
crates/neo-engine/src/: config.rs  lib.rs  lifecycle.rs  live_dom.rs  mock.rs  session.rs  watchdog.rs
crates/neo-engine/src/pipeline/: context.rs  mod.rs
crates/neo-engine/src/session/: bot_detection.rs  browser_impl.rs  hydration.rs  mod.rs  pipeline.rs  pipeline_phases.rs  prefetch.rs  script_exec.rs  script_parts.rs  scripts.rs  stub.rs
crates/neo-engine/tests/: dom_events_test.rs  e2e_session.rs  engine_tests.rs  hydration_pipeline_tests.rs  interaction_test.rs  module_pipeline_tests.rs
crates/neo-extract/: Cargo.toml
crates/neo-extract/src/: classify.rs  classify_signals.rs  delta.rs  lib.rs  mock.rs  semantic.rs  structured.rs  structured_helpers.rs  wom.rs  wom_builder.rs
crates/neo-extract/tests/: extract_tests.rs  fixture_validation.rs
crates/neo-http/: Cargo.toml
crates/neo-http/src/: cache.rs  classify.rs  classify_request.rs  client.rs  cookies.rs  headers.rs  impit_client.rs  lib.rs  mock.rs  storage.rs
crates/neo-http/src/cookies/: chrome.rs  mod.rs  sqlite.rs
crates/neo-http/tests/: brotli_test.rs  cache_test.rs  classify_edge_cases_test.rs  classify_test.rs  client_test.rs  cookies_test.rs
crates/neo-mcp/: Cargo.toml
crates/neo-mcp/src/: lib.rs  mock.rs  server.rs  state.rs
crates/neo-mcp/src/tools/: browse.rs  consent.rs  devtools.rs  eval.rs  extract.rs  ghost.rs  import_cookies.rs  interact.rs  mod.rs  navigate.rs  page.rs  pipeline.rs  search.rs  trace.rs  view.rs  wait.rs
crates/neo-mcp/tests/: comprehensive_tests.rs  mcp_tests.rs
crates/neo-nrp/: Cargo.toml
crates/neo-nrp/src/: dispatcher.rs  lib.rs  resolve.rs  semantic_tree.rs  types.rs
crates/neo-runtime/: Cargo.toml
crates/neo-runtime/src/: chrome_fallback.rs  code_cache.rs  event_loop.rs  imports.rs  lib.rs  mock.rs  module_eval.rs  modules.rs  ops.rs  scheduler.rs  timers.rs  trace.rs  trace_events.rs  v8.rs  v8_runtime_impl.rs
crates/neo-runtime/src/ops/: console.rs  cookies.rs  fetch.rs  headers.rs  misc.rs  mod.rs  navigation.rs  storage.rs  timers.rs  url_filter.rs
crates/neo-runtime/tests/: bootstrap_polyfills_test.rs  chatgpt_manifest_test.rs  chatgpt_scripts_test.rs  error_capture_test.rs  eval_wrapper_test.rs  heavy_module_test.rs  microtask_diagnostic_test.rs  microtask_layers_test.rs  microtask_tests.rs  module_budget_test.rs  module_hydration_tests.rs  module_microtask_test.rs  mutation_observer_audit.rs  runtime_tests.rs  settle_heavy_test.rs  settle_microtask_test.rs  terminate_drain_test.rs  xhr_test.rs
docs/: CAPABILITY-MATRIX.md  GHOST-ACTIONS-STATUS.md  LEARNINGS.md  MVP-TEST-BATTERY.md  PDR-100-PERCENT.md  PDR-ANTIBOT.md  PDR-ASYNC-TIMER.md  PDR-BROWSER-COMPLETE.md  PDR-E2E.md  PDR-FINAL-GAPS.md  PDR-FULL-HYDRATION.md  PDR-HYDRATION-REAL.md  PDR-INTERACTION.md  PDR-MICROTASK-ROOT-CAUSE.md  PDR-NRP.md  PDR-PERFORMANCE.md  PDR-PLUGINS.md  PDR-RECOVERY-FINAL.md  PDR-REMAINING-GAPS.md  PDR-ROOT-CAUSE.md  PDR-SESSION-MANAGEMENT.md  PDR-T3-STREAMS.md  PDR-VIRTUAL-ACTIONS.md  PDR-browser-engine.md  agents.md  (+7 more)
docs-pdr/: NRP-ISSUES.md  PDR-BROWSER-ANATOMY.md  PDR-BROWSER-SHIM.md  PDR-CHROME-COMPARISON.md  PDR-CHROME-TRANSPORT.md  PDR-E2E.md  PDR-FUNCTIONAL-BROWSER.md  PDR-GHOST-ACTIONS.md  PDR-HYDRATION-100.md  PDR-HYDRATORS.md  PDR-MVP.md  PDR-RECOVERY-FINAL.md  PDR-RECOVERY.md  PDR-SESSION-ISOLATION.md  PDR-SPA-HYDRATION-V2.md  PDR-T3-STREAMS.md  PDR-V3-FUSION.md  PDR-V3-REAL-FUSION.md  PROCESS-LOG.md  TIER-HYDRATOR.md
tools/v3/: benchmark.py  neo-browser.py  neo_browser.py  plugins.py  pyproject.toml  server.py
tools/v3/neo_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/v3/rust/: CHANGELOG.md  Cargo.toml  Dockerfile
tools/v3/rust/js/: bootstrap.js  browser.js  classify.js  consent.js  crypto.js  custom_elements.js  delta.js  dom.js  dom_tree.js  dynamic_scripts.js  events.js  eventsource.js  extract.js  extract_data_cdp.js  forms.js  iframe.js  indexeddb.js  noise.js  observer.js  sentinel.js  shadow_dom.js  webapis.js  websocket.js  wom.js
tools/v3/rust/src/: auth.rs  chrome.rs  cors_proxy.rs  engine.rs  ghost.rs  http_client.rs  main.rs  mcp.rs  semantic.rs  stealth.rs  virtual_display.rs
tools/v3/rust/src/cdp/: accessibility.rs  browser_domain.rs  css.rs  dom.rs  dom_storage.rs  emulation.rs  fetch.rs  indexed_db.rs  input.rs  log_domain.rs  mock.rs  mod.rs  network.rs  page.rs  performance.rs  runtime.rs  security.rs  service_worker.rs  target.rs  transport.rs
tools/v3/rust/src/neorender/: cookie_jar.rs  dom_export.rs  dom_tree.rs  extract.rs  http_cache.rs  interact.rs  mod.rs  network_log.rs  ops.rs  pool.rs  rate_limit.rs  session.rs  stealth.rs  storage.rs  v8_runtime.rs
tools/v3/rust/src/neorender/net/: mod.rs  referrer.rs
tools/v3/rust/tests/: auth_flow.rs  smoke.rs  test_20sites.sh  test_api_battery.sh  test_battery.sh  test_chatgpt_integration.sh  test_headless_parity.sh  test_hydration.sh
tools/v3/rust/tests/battery/: basic.html  vue-like.html
tools/v3/rust/tests/hydration-test/: entry.js  index.html  route-chat.js  vendor.js
tools/v3/tests/unit/: test_chrome_client.py  test_neobrowser_core.py  test_new_tools.py  test_profile.py
(+294 files in other folders)
