[workspace]
members = [
    "crates/neo-types",
    "crates/neo-http",
    "crates/neo-dom",
    "crates/neo-runtime",
    "crates/neo-engine",
    "crates/neo-interact",
    "crates/neo-extract",
    "crates/neo-trace",
    "crates/neo-chrome",
    "crates/neo-mcp",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pitiflautico/neorender"

[workspace.dependencies]
thiserror = "=2.0.12"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.44.2", features = ["full"] }
url = "=2.5.4"

[package]
name = "neorender"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neorender"
path = "src/main.rs"

[dependencies]
neo-mcp = { path = "crates/neo-mcp" }
neo-engine = { path = "crates/neo-engine" }
neo-http = { path = "crates/neo-http" }
neo-dom = { path = "crates/neo-dom" }
neo-runtime = { path = "crates/neo-runtime" }
neo-interact = { path = "crates/neo-interact" }
neo-extract = { path = "crates/neo-extract" }
neo-trace = { path = "crates/neo-trace" }
neo-types = { path = "crates/neo-types" }
serde_json.workspace = true
