[workspace]
members = [
    "crates/neo-types",
    "crates/neo-http",
    "crates/neo-dom",
    "crates/neo-runtime",
    "crates/neo-engine",
    "crates/neo-interact",
    "crates/neo-extract",
    "crates/neo-trace",
    "crates/neo-chrome",
    "crates/neo-mcp",
    "crates/neo-nrp",
]
resolver = "2"

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pitiflautico/neorender"

[workspace.dependencies]
thiserror = "=2.0.12"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.50.0", features = ["full"] }
url = "=2.5.8"

[package]
name = "neorender"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neorender"
path = "src/main.rs"

[dependencies]
neo-mcp = { path = "crates/neo-mcp" }
neo-engine = { path = "crates/neo-engine" }
neo-http = { path = "crates/neo-http" }
neo-dom = { path = "crates/neo-dom" }
neo-runtime = { path = "crates/neo-runtime" }
neo-interact = { path = "crates/neo-interact" }
neo-extract = { path = "crates/neo-extract" }
neo-trace = { path = "crates/neo-trace" }
neo-types = { path = "crates/neo-types" }
neo-chrome = { path = "crates/neo-chrome" }
serde_json.workspace = true
tokio.workspace = true

[patch.crates-io]
h2 = { git = "https://github.com/apify/h2", rev = "7f393a728a8db07cabb1b78d2094772b33943b9a" }
rustls = { git = "https://github.com/apify/rustls", rev = "c908559019c6521fbc4b487317a4ea24088a99f3" }
tower-http = { git = "https://github.com/apify/tower-http", rev = "f9efc0d9193e774d33aedc1022b922efefc22052" }
hyper-util = { git = "https://github.com/apify/hyper-util", rev = "9b7795dfd7158fc55e7c84b65bf1dae1d2dea67d" }
