[package]
name = "neo-extract"
version.workspace = true
edition.workspace = true

[dependencies]
neo-types = { path = "../neo-types" }
neo-dom = { path = "../neo-dom" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
neo-dom = { path = "../neo-dom" }
