[package]
name = "neo-http"
version.workspace = true
edition.workspace = true

[dependencies]
neo-types = { path = "../neo-types" }
rquest = { version = "=5.1.0", features = ["cookies", "gzip", "brotli", "zstd", "deflate"] }
rquest-util = "=2.2.1"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
url.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "=3.15.0"
