[package]
name = "neo-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
neo-types = { path = "../neo-types" }
neo-http = { path = "../neo-http" }
neo-dom = { path = "../neo-dom" }
neo-chrome = { path = "../neo-chrome" }
deno_core = "0.393"
deno_error = "0.7"
futures = "0.3"
tokio = { workspace = true }
wreq = "=6.0.0-rc.28"
brotli = "7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
tempfile = "3"
